@@ -26,6 +26,8 @@ Don't redraw the whole pinboard on iconfiy/uniconify.
 
 Winking doesn't work in List view.
 
+Use XSetting for DnD threshold distance.
+
 Sorting by group/user should use name (Bernard Jungen).
 
 			FEATURES FOR 2.1
