@@ -2,6 +2,11 @@
 			A RISC OS-like filer for X
 			by Thomas Leonard
 
+23-Feb-2003
+~~~~~~~~~~~
+Bugfix: Using a SOAP call to open a non-existant directory made the filer
+	crash.
+
 22-Feb-2003
 ~~~~~~~~~~~
 Make Size toolbar icon only set the size. Use a second button to set automatic
